media/lazylibrarian/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lazylibrarian
  namespace: media
spec:
  selector:
    app: lazylibrarian
  ports:
  - port: 80
    targetPort: http
    name: http
