media/lazylibrarian/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lazylibrarian
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: lazylibrarian.michaelthomson.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: lazylibrarian
            port:
              name: http
  tls:
    - hosts:
        - lazylibrarian.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
